# splinefit

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  pyproject.toml  splinefit.pyi
benches/: scipy_bench.py  spline_bench.rs
python/: README.md
scripts/python/: README.md  cardinal_spline.py  integration_and_roots.py  smoothing_spline.py
src/: clocur.rs  concur.rs  curfit.rs  dierckx.rs  evaluate.rs  lib.rs  ops.rs  python.rs  util.rs  wasm.rs
tests/: integration.rs
wasm/: README.md
xtask/src/: main.rs
