[package]
name = "dierckx-rs"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust implementation of Dierckx' B-Spline curve and surface fitting library"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/dierckx-rs"
keywords = ["spline", "interpolation", "curve", "smoothing", "fitting"]
license = "MIT OR Apache-2.0"

[dependencies]
