[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "splinefit"
dynamic = ["version"]
description = "B-spline curve fitting — pure-Rust Dierckx engine with Python bindings"
readme = "python/README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.9"
dependencies = ["numpy"]
authors = [
    {name = "Gerard Harbers"},
    {name = "Harbers Bik LLC"},
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/harbik/splinefit"
Documentation = "https://docs.rs/splinefit"

[tool.maturin]
features = ["python"]
include = ["splinefit.pyi"]
